@@ -1,3 +1,7 @@
+Sun Apr  6 22:33:51 CEST 2008 Christian Anthon <anthon@kiku.dk>
+
+	* lib/neuralnet.c: fix minor apple compile problem.
+
 Sun Apr  6 22:33:04 CEST 2008 Christian Anthon <anthon@kiku.dk>
 
 	* INSTALL: update .
